2005-10-12  Rodney Dawes  <dobey@novell.com>
	* README: Fix the link to point at the tarball on tango-project.org

	* */*/Makefile.am: Add missing icons and .icon files to icons_DATA so
	that they get disted and installed properly

--- a/16x16/actions/Makefile.am
+++ b/16x16/actions/Makefile.am
@@ -11,11 +11,12 @@ icons_DATA =			\
 	document-new.png	\
 	document-print.png	\
 	document-template.png	\
-	go-next.png		\
 	go-jump.png		\
+	go-next.png		\
 	go-previous.png		\
 	system-log-out.png	\
 	system-search.png	\
+	system-shutdown.png	\
 	view-refresh.png
 
 EXTRA_DIST =			\
