--- a/22x22/apps/Makefile.am
+++ b/22x22/apps/Makefile.am
@@ -13,6 +13,7 @@ icons_DATA =					\
 	internet-mail.png			\
 	internet-news-reader.png		\
 	internet-web-browser.png		\
+	multimedia-volume-control.png		\
 	office-calendar.png			\
 	preferences-desktop-accessibility.png	\
 	preferences-desktop-font.png		\
