2005-10-13  Rodney Dawes  <dobey@novell.com>
	* */*/Makefile.am:
	* */*/edit-paste.*:
	* */*/utilities-system-monitor.*:
	Add the new edit-paste and utilities-system-monitor icons submitted
	by Andreas Nilsson

	* *.cvsignore: Add files to ignore a bunch of junk we don't need to
	have ending up committed to cvs

--- a/16x16/apps/Makefile.am
+++ b/16x16/apps/Makefile.am
@@ -26,7 +26,8 @@ icons_DATA =					\
 	system-installer.png			\
 	system-lock-screen.png			\
 	system-software-update.png		\
-	system-users.png
+	system-users.png			\
+	utilities-system-monitor.png
 
 EXTRA_DIST =					\
 	$(icons_DATA)
