2005-10-14  Rodney Dawes  <dobey@novell.com>
	* Makefile.am: Add rules for creating svg2png.sh

	* configure.ac: Add a check for using rsvg or ksvgtopng to render
	some large scale bitmap versions of svg icons (disabled by default)

	* svg2png.sh.in: Shell script wrapper for converting svg to png

	* scalable/*/Makefile.am: Add extra code to install-data-local so that
	we can generate large scale png images at install time if the option
	was enabled during configure

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,12 @@ THEME_IN_FILES = index.theme.in
 
 @INTLTOOL_THEME_RULE@
 
+noinst_SCRIPTS = svg2png.sh
+
+%.sh: %.sh.in
+	sed -e "s|\@SVGCONVERT\@|$(SVGCONVERT)|g" < $< > $@
+	chmod +x $@
+
 theme_DATA = index.theme
 
 EXTRA_DIST=				\
@@ -26,7 +32,8 @@ install-data-local:
 	fi
 
 CLEANFILES = 				\
-	index.theme
+	index.theme			\
+	svg2png.sh
 
 DISTCLEANFILES = 			\
 	intltool-extract		\
