--- a/scalable/emotes/Makefile.am
+++ b/scalable/emotes/Makefile.am
@@ -17,3 +17,14 @@ EXTRA_DIST =				\
 
 install-data-local: install-iconsDATA
 	(cd $(DESTDIR)$(themedir)/$(size) && $(ICONMAP) -c $(context))
+if ENABLE_LARGE_BITMAPS
+	for i in 32 48 64 128; do \
+		pngdir="$(DESTDIR)$(themedir)/$${i}x$${i}/$(context)"; \
+		$(mkinstalldirs) $$pngdir; \
+		for icon in $(icons_DATA); do \
+			$(top_builddir)/svg2png.sh $$i $$pngdir $$icon; \
+		done; \
+		(cd $(DESTDIR)$(themedir)/$${i}x$${i} && $(ICONMAP) -c $(context)); \
+	done
+endif
+
