--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AC_CONFIG_SRCDIR(index.theme.in)
 AM_INIT_AUTOMAKE([1.9 tar-ustar])
 
 IT_PROG_INTLTOOL([0.33])
+PKG_PROG_PKG_CONFIG([0.15.0])
 
 GETTEXT_PACKAGE="${PACKAGE}"
 AC_SUBST(GETTEXT_PACKAGE)
