2005-10-14  Jakub Steiner <jimmac@ximian.com>
* go-home: new stock home icon

--- a/16x16/actions/Makefile.am
+++ b/16x16/actions/Makefile.am
@@ -12,6 +12,7 @@ icons_DATA =			\
 	document-print.png	\
 	document-template.png	\
 	edit-paste.png		\
+	go-home.png		\
 	go-jump.png		\
 	go-next.png		\
 	go-previous.png		\
