2005-10-14  Rodney Dawes  <dobey@novell.com>
	* configure.ac: Use the deprecated AC_PROG_INTLTOOL so that people
	still using crappy broken versions of gnome-common 2.8 can build

--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@ AC_CONFIG_SRCDIR(index.theme.in)
 
 AM_INIT_AUTOMAKE([1.9 tar-ustar])
 
-IT_PROG_INTLTOOL([0.33])
+AC_PROG_INTLTOOL([0.33])
 PKG_PROG_PKG_CONFIG([0.15.0])
 
 GETTEXT_PACKAGE="${PACKAGE}"
