2005-10-15  Rodney Dawes  <dobey@novell.com>
	* Makefile.am: Remove the svg2png.sh creation stuff from here, and
	put svg2png.sh in DISTCLEANFILES instead of CLEANFILES

	* configure.ac: Generate svg2png.sh here and make it exeuctable

	* index.theme.in: Apply patch from Niko Mirthes to add the large scale
	bitmap directories, some KDE-specific tags, and to inherit crystalsvg
	Add directory listings for the emblems and emotes contexts

	* svg2png.sh.in: Fix the check for .icon files so that we don't try
	to convert them to pixmaps

	* scalable/*/Makefile.am: Add 72 and 96 to the list of sizes for
	creating large scale bitmaps for KDE

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,16 +1,10 @@
-DISTCHECK_CONFIGURE_FLAGS = --disable-icon-framing
+DISTCHECK_CONFIGURE_FLAGS = --disable-icon-framing --enable-png-creation
 
 SUBDIRS = 16x16 22x22 scalable po
 
 THEME_IN_FILES = index.theme.in
 
 @INTLTOOL_THEME_RULE@
-
-noinst_SCRIPTS = svg2png.sh
-
-%.sh: %.sh.in
-	sed -e "s|\@SVGCONVERT\@|$(SVGCONVERT)|g" < $< > $@
-	chmod +x $@
 
 theme_DATA = index.theme
 
@@ -33,10 +27,10 @@ install-data-local:
 	fi
 
 CLEANFILES = 				\
-	index.theme			\
-	svg2png.sh
+	index.theme
 
 DISTCLEANFILES = 			\
+	svg2png.sh			\
 	intltool-extract		\
 	intltool-merge			\
 	intltool-update
