--- a/16x16/actions/Makefile.am
+++ b/16x16/actions/Makefile.am
@@ -7,6 +7,7 @@ iconsdir = $(themedir)/$(size)/$(context)
 icons_DATA =			\
 	address-book-new.png	\
 	appointment-new.png	\
+	bookmark-new.png	\
 	contact-new.png		\
 	document-new.png	\
 	document-print.png	\
