--- a/16x16/emblems/Makefile.am
+++ b/16x16/emblems/Makefile.am
@@ -5,6 +5,7 @@ context = emblems
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
+	emblem-favorites.png	\
 	emblem-photos.png
 
 EXTRA_DIST =				\
