--- a/scalable/emblems/Makefile.am
+++ b/scalable/emblems/Makefile.am
@@ -5,6 +5,7 @@ context = emblems
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
+	emblem-favorites.svg	\
 	emblem-photos.svg
 
 EXTRA_DIST =				\
