--- a/22x22/actions/Makefile.am
+++ b/22x22/actions/Makefile.am
@@ -17,6 +17,7 @@ icons_DATA =			\
 	go-jump.png		\
 	go-next.png		\
 	go-previous.png		\
+	process-stop.png	\
 	system-log-out.png	\
 	system-search.png	\
 	system-shutdown.png	\
