--- a/22x22/actions/Makefile.am
+++ b/22x22/actions/Makefile.am
@@ -11,6 +11,7 @@ icons_DATA =			\
 	contact-new.png		\
 	document-new.png	\
 	document-print.png	\
+	edit-copy.png		\
 	edit-paste.png		\
 	go-bottom.png	\
 	go-down.png	\
