--- a/22x22/actions/Makefile.am
+++ b/22x22/actions/Makefile.am
@@ -30,6 +30,7 @@ icons_DATA =			\
 	system-log-out.png	\
 	system-search.png	\
 	system-shutdown.png	\
+	tab-new.png	\
 	view-refresh.png
 
 EXTRA_DIST =			\
