2005-11-01  Jakub Steiner <jimmac@ximian.com>
* document-save: in the end we go with widely recognised floppy
metaphor. Artwork by Tuomas Kuosmanen. Dude, get the bloody cvs

--- a/scalable/actions/Makefile.am
+++ b/scalable/actions/Makefile.am
@@ -11,6 +11,7 @@ icons_DATA =			\
 	contact-new.svg		\
 	document-new.svg	\
 	document-print.svg	\
+	document-save.svg	\
 	edit-copy.svg		\
 	edit-cut.svg	\
 	edit-paste.svg		\
