--- a/16x16/actions/Makefile.am
+++ b/16x16/actions/Makefile.am
@@ -11,6 +11,7 @@ icons_DATA =			\
 	contact-new.png		\
 	document-new.png	\
 	document-print.png	\
+	document-save.png	\
 	edit-copy.png		\
 	edit-cut.png	\
 	edit-paste.png		\
