--- a/22x22/devices/Makefile.am
+++ b/22x22/devices/Makefile.am
@@ -6,6 +6,7 @@ iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
 	audio-card.png			\
+	audio-input-microphone.png	\
 	battery.png			\
 	camera-photo.png		\
 	camera-video.png		\
