--- a/scalable/devices/Makefile.am
+++ b/scalable/devices/Makefile.am
@@ -6,6 +6,7 @@ iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
 	audio-card.svg			\
+	audio-input-microphone.svg	\
 	battery.svg					\
 	camera-photo.svg		\
 	camera-video.svg		\
