--- a/16x16/actions/Makefile.am
+++ b/16x16/actions/Makefile.am
@@ -27,6 +27,7 @@ icons_DATA =			\
 	go-previous.png		\
 	go-top.png	\
 	go-up.png	\
+	help-contents.png	\
 	process-stop.png	\
 	system-log-out.png	\
 	system-search.png	\
