--- a/16x16/actions/Makefile.am
+++ b/16x16/actions/Makefile.am
@@ -10,6 +10,7 @@ icons_DATA =			\
 	bookmark-new.png	\
 	contact-new.png		\
 	document-new.png	\
+	document-open.png	\
 	document-print.png	\
 	document-properties.png	\
 	document-save.png	\
