2005-11-09  Rodney Dawes  <dobey@novell.com>
	* dialog-error: icon for error dialogs

--- a/16x16/status/Makefile.am
+++ b/16x16/status/Makefile.am
@@ -6,6 +6,7 @@ iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =			\
 	battery-caution.png	\
+	dialog-error.png	\
 	dialog-information.png	\
 	dialog-warning.png	\
 	image-loading.png	\
