--- a/16x16/status/Makefile.am
+++ b/16x16/status/Makefile.am
@@ -11,7 +11,9 @@ icons_DATA =			\
 	dialog-warning.png	\
 	image-loading.png	\
 	image-missing.png	\
-	mail-attachment.png
+	locked.png	\
+	mail-attachment.png \
+	unlocked.png
 
 EXTRA_DIST =			\
 	$(icons_DATA)
