--- a/22x22/status/Makefile.am
+++ b/22x22/status/Makefile.am
@@ -13,7 +13,7 @@ icons_DATA =			\
 	image-missing.png	\
 	locked.png	\
 	mail-attachment.png	\
-	unloaked.png
+	unlocked.png
 
 EXTRA_DIST =			\
 	$(icons_DATA)
