--- a/16x16/mimetypes/Makefile.am
+++ b/16x16/mimetypes/Makefile.am
@@ -18,6 +18,7 @@ icons_DATA =					\
 	x-directory-desktop.png			\
 	x-directory-normal-drag-accept.png	\
 	x-directory-normal-home.png		\
+	x-directory-normal-open.png		\
 	x-directory-normal-visiting.png		\
 	x-directory-normal.png			\
 	x-directory-remote.png			\
