--- a/16x16/emotes/Makefile.am
+++ b/16x16/emotes/Makefile.am
@@ -8,6 +8,7 @@ icons_DATA =				\
 	face-angel.png	\
 	face-crying.png	\
 	face-devil-grin.png	\
+	face-glasses.png	\
 	face-grin.png	\
 	face-laughing.png	\
 	face-sad.png	\
