--- a/22x22/emotes/Makefile.am
+++ b/22x22/emotes/Makefile.am
@@ -12,8 +12,8 @@ icons_DATA =				\
 	face-grin.png	\
 	face-laughing.png	\
 	face-sad.png	\
-	face-shocked.png	\
 	face-smile.png	\
+	face-surprise.png	\
 	face-wink.png
 
 EXTRA_DIST =				\
