--- a/22x22/emotes/Makefile.am
+++ b/22x22/emotes/Makefile.am
@@ -10,9 +10,9 @@ icons_DATA =				\
 	face-devil-grin.png	\
 	face-glasses.png	\
 	face-grin.png	\
-	face-laughing.png	\
 	face-sad.png	\
 	face-smile.png	\
+	face-smile-big.png	\
 	face-surprise.png	\
 	face-wink.png
 
