--- a/22x22/emblems/Makefile.am
+++ b/22x22/emblems/Makefile.am
@@ -8,6 +8,7 @@ icons_DATA =				\
 	emblem-favorites.png	\
 	emblem-important.png	\
 	emblem-photos.png	\
+	emblem-symbolic-link.png	\
 	emblem-system.png
 
 EXTRA_DIST =				\
