--- a/scalable/emblems/Makefile.am
+++ b/scalable/emblems/Makefile.am
@@ -8,7 +8,7 @@ icons_DATA =				\
 	emblem-favorites.svg	\
 	emblem-important.svg	\
 	emblem-photos.svg	\
-	emblem-symbolic-link.png	\
+	emblem-symbolic-link.svg	\
 	emblem-system.svg
 
 EXTRA_DIST =				\
