generic media player

--- a/22x22/devices/Makefile.am
+++ b/22x22/devices/Makefile.am
@@ -19,6 +19,7 @@ icons_DATA =				\
 	input-mouse.png			\
 	media-cdrom.png			\
 	media-floppy.png	\
+	multimedia-player.png	\
 	network.png			\
 	network-wireless.png		\
 	printer.png			\
