--- a/scalable/categories/Makefile.am
+++ b/scalable/categories/Makefile.am
@@ -7,6 +7,7 @@ iconsdir = $(themedir)/$(size)/$(context)
 icons_DATA =				\
 	applications-development.svg	\
 	applications-games.svg	\
+	applications-graphics.svg	\
 	preferences-desktop.svg
 
 EXTRA_DIST =				\
