2005-12-07  Rodney Dawes  <dobey@novell.com>
	* configure.ac: Fix the icon-naming-utils check to use pkgconfig and
	require icon-naming-utils >= 0.6.0
	Add */places/Makefile to the config files to output

	* */Makefile.am: Add places to SUBDIRS

	* */emblems/Makefile.am:
	* */emblems/emblem-favorites.*: Rename to emblem-favorite

	* */places/Makefile.am: Add the new places context in to cover some
	of the icons we have in Tango

	* */mimetypes/x-directory*: Rename and move to places or status as
	according to the latest version of the Icon Naming Specification

--- a/16x16/emblems/Makefile.am
+++ b/16x16/emblems/Makefile.am
@@ -5,12 +5,12 @@ context = emblems
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
-	emblem-favorites.png	\
-	emblem-important.png	\
-	emblem-photos.png	\
-	emblem-readonly.png	\
+	emblem-favorite.png		\
+	emblem-important.png		\
+	emblem-photos.png		\
+	emblem-readonly.png		\
 	emblem-symbolic-link.png	\
-	emblem-system.png	\
+	emblem-system.png		\
 	emblem-unreadable.png
 
 EXTRA_DIST =				\
