--- a/22x22/places/Makefile.am
+++ b/22x22/places/Makefile.am
@@ -1,25 +1,19 @@
 
 size = 22x22
-context = mimetypes
+context = places
 
 iconsdir = $(themedir)/$(size)/$(context)
 
-icons_DATA =					\
-	application-certificate.png		\
-	application-x-executable.png		\
-	audio-x-generic.png			\
-	image-x-generic.png			\
-	package-x-generic.png			\
-	text-html.png				\
-	text-x-generic.png			\
-	text-x-generic-template.png			\
-	text-x-script.png			\
-	video-x-generic.png			\
-	x-office-address-book.png		\
-	x-office-document.png		\
-	x-office-spreadsheet.png
+icons_DATA =			\
+	folder-remote.png	\
+	folder.png		\
+	network-server.png	\
+	network-workgroup.png	\
+	user-desktop.png	\
+	user-home.png		\
+	user-trash.png
 
-EXTRA_DIST =					\
+EXTRA_DIST =			\
 	$(icons_DATA)
 
 install-data-local: install-iconsDATA
