--- a/scalable/emblems/Makefile.am
+++ b/scalable/emblems/Makefile.am
@@ -5,12 +5,12 @@ context = emblems
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
-	emblem-favorites.svg	\
-	emblem-important.svg	\
-	emblem-photos.svg	\
-	emblem-readonly.svg	\
+	emblem-favorite.svg		\
+	emblem-important.svg		\
+	emblem-photos.svg		\
+	emblem-readonly.svg		\
 	emblem-symbolic-link.svg	\
-	emblem-system.svg	\
+	emblem-system.svg		\
 	emblem-unreadable.svg
 
 EXTRA_DIST =				\
