--- a/22x22/Makefile.am
+++ b/22x22/Makefile.am
@@ -1,3 +1,3 @@
 
-SUBDIRS = actions apps categories devices emblems emotes mimetypes status
+SUBDIRS = actions apps categories devices emblems emotes mimetypes places status
 
