--- a/scalable/Makefile.am
+++ b/scalable/Makefile.am
@@ -1,2 +1,2 @@
 
-SUBDIRS = actions apps categories devices emblems emotes mimetypes status
+SUBDIRS = actions apps categories devices emblems emotes mimetypes places status
