--- a/index.theme.in
+++ b/index.theme.in
@@ -6,9 +6,9 @@ Example=x-directory-normal
 
 # KDE Specific Stuff
 DisplayDepth=32
-LinkOverlay=link
-LockOverlay=lockoverlay
-ZipOverlay=zip
+LinkOverlay=link_overlay
+LockOverlay=lock_overlay
+ZipOverlay=zip_overlay
 DesktopDefault=48
 DesktopSizes=16,22,32,48,64,72,96,128
 ToolbarDefault=22
@@ -21,7 +21,7 @@ PanelDefault=32
 PanelSizes=16,22,32,48,64,72,96,128
 
 # Directory list
-Directories=16x16/actions,16x16/apps,16x16/categories,16x16/devices,16x16/emblems,16x16/emotes,16x16/mimetypes,16x16/status,22x22/actions,22x22/apps,22x22/categories,22x22/devices,22x22/emblems,22x22/emotes,22x22/mimetypes,22x22/status,24x24/actions,24x24/apps,24x24/categories,24x24/devices,24x24/emblems,24x24/emotes,24x24/mimetypes,24x24/status,32x32/actions,32x32/apps,32x32/categories,32x32/devices,32x32/emblems,32x32/emotes,32x32/mimetypes,32x32/status,48x48/actions,48x48/apps,48x48/categories,48x48/devices,48x48/emblems,48x48/emotes,48x48/mimetypes,48x48/status,64x64/actions,64x64/apps,64x64/categories,64x64/devices,64x64/emblems,64x64/emotes,64x64/mimetypes,64x64/status,72x72/actions,72x72/apps,72x72/categories,72x72/devices,72x72/emblems,72x72/emotes,72x72/mimetypes,72x72/status,96x96/actions,96x96/apps,96x96/categories,96x96/devices,96x96/emblems,96x96/emotes,96x96/mimetypes,96x96/status,128x128/actions,128x128/apps,128x128/categories,128x128/devices,128x128/emblems,128x128/emotes,128x128/mimetypes,128x128/status,scalable/actions,scalable/apps,scalable/categories,scalable/devices,scalable/emblems,scalable/emotes,scalable/mimetypes,scalable/status
+Directories=16x16/actions,16x16/apps,16x16/categories,16x16/devices,16x16/emblems,16x16/emotes,16x16/mimetypes,16x16/places,16x16/status,22x22/actions,22x22/apps,22x22/categories,22x22/devices,22x22/emblems,22x22/emotes,22x22/mimetypes,22x22/places,22x22/status,24x24/actions,24x24/apps,24x24/categories,24x24/devices,24x24/emblems,24x24/emotes,24x24/mimetypes,24x24/places,24x24/status,32x32/actions,32x32/apps,32x32/categories,32x32/devices,32x32/emblems,32x32/emotes,32x32/mimetypes,32x32/places,32x32/status,48x48/actions,48x48/apps,48x48/categories,48x48/devices,48x48/emblems,48x48/emotes,48x48/mimetypes,48x48/places,48x48/status,64x64/actions,64x64/apps,64x64/categories,64x64/devices,64x64/emblems,64x64/emotes,64x64/mimetypes,64x64/places,64x64/status,72x72/actions,72x72/apps,72x72/categories,72x72/devices,72x72/emblems,72x72/emotes,72x72/mimetypes,72x72/places,72x72/status,96x96/actions,96x96/apps,96x96/categories,96x96/devices,96x96/emblems,96x96/emotes,96x96/mimetypes,96x96/places,96x96/status,128x128/actions,128x128/apps,128x128/categories,128x128/devices,128x128/emblems,128x128/emotes,128x128/mimetypes,128x128/places,128x128/status,scalable/actions,scalable/apps,scalable/categories,scalable/devices,scalable/emblems,scalable/emotes,scalable/mimetypes,scalable/places,scalable/status
 
 [16x16/actions]
 Size=16
@@ -56,6 +56,11 @@ Type=Fixed
 [16x16/mimetypes]
 Size=16
 Context=MimeTypes
+Type=Fixed
+
+[16x16/places]
+Size=16
+Context=Places
 Type=Fixed
 
 [16x16/status]
@@ -98,6 +103,11 @@ Size=22
 Context=MimeTypes
 Type=Fixed
 
+[22x22/places]
+Size=22
+Context=Places
+Type=Fixed
+
 [22x22/status]
 Size=22
 Context=Status
@@ -136,6 +146,11 @@ Type=Fixed
 [24x24/mimetypes]
 Size=24
 Context=MimeTypes
+Type=Fixed
+
+[24x24/places]
+Size=24
+Context=Places
 Type=Fixed
 
 [24x24/status]
@@ -178,6 +193,11 @@ Size=32
 Context=MimeTypes
 Type=Fixed
 
+[32x32/places]
+Size=32
+Context=Places
+Type=Fixed
+
 [32x32/status]
 Size=32
 Context=Status
@@ -216,6 +236,11 @@ Type=Fixed
 [48x48/mimetypes]
 Size=48
 Context=MimeTypes
+Type=Fixed
+
+[48x48/places]
+Size=48
+Context=Places
 Type=Fixed
 
 [48x48/status]
@@ -258,6 +283,11 @@ Size=64
 Context=MimeTypes
 Type=Fixed
 
+[64x64/places]
+Size=64
+Context=Places
+Type=Fixed
+
 [64x64/status]
 Size=64
 Context=Status
@@ -296,6 +326,11 @@ Type=Fixed
 [72x72/mimetypes]
 Size=72
 Context=MimeTypes
+Type=Fixed
+
+[72x72/places]
+Size=72
+Context=Places
 Type=Fixed
 
 [72x72/status]
@@ -338,6 +373,11 @@ Size=96
 Context=MimeTypes
 Type=Fixed
 
+[96x96/places]
+Size=96
+Context=Places
+Type=Fixed
+
 [96x96/status]
 Size=96
 Context=Status
@@ -378,6 +418,11 @@ Size=128
 Context=MimeTypes
 Type=Fixed
 
+[128x128/places]
+Size=128
+Context=Places
+Type=Fixed
+
 [128x128/status]
 Size=128
 Context=Stxatus
@@ -388,53 +433,60 @@ Size=48
 Context=Actions
 Type=Scalable
 MinSize=32
-MaxSize=2048
+MaxSize=256
 
 [scalable/apps]
 Size=48
 Context=Applications
 Type=Scalable
 MinSize=32
-MaxSize=2048
+MaxSize=256
 
 [scalable/categories]
 Size=48
 Context=Categories
 Type=Scalable
 MinSize=32
-MaxSize=2048
+MaxSize=256
 
 [scalable/devices]
 Size=48
 Context=Devices
 Type=Scalable
 MinSize=32
-MaxSize=2048
+MaxSize=256
 
 [scalable/emblems]
 Size=48
 Context=Emblems
 Type=Scalable
 MinSize=32
-MaxSize=2048
+MaxSize=256
 
 [scalable/emotes]
 Size=48
 Context=Emotes
 Type=Scalable
 Minsize=32
-MaxSize=2048
+MaxSize=256
 
 [scalable/mimetypes]
 Size=48
 Context=MimeTypes
 Type=Scalable
 MinSize=32
-MaxSize=2048
+MaxSize=256
+
+[scalable/places]
+Size=48
+Context=Places
+Type=Scalable
+MinSize=32
+MaxSize=256
 
 [scalable/status]
 Size=48
 Context=Status
 Type=Scalable
-MinSize=0
-MaxSize=2048
+MinSize=32
+MaxSize=256
