2005-12-12  Rodney Dawes  <dobey@novell.com>
	* 22x22/status/Makefile.am: Add missing status icons for places

--- a/22x22/status/Makefile.am
+++ b/22x22/status/Makefile.am
@@ -9,11 +9,15 @@ icons_DATA =			\
 	dialog-error.png	\
 	dialog-information.png	\
 	dialog-warning.png	\
+	folder-drag-accept.png	\
+	folder-open.png		\
+	folder-visiting.png	\
 	image-loading.png	\
 	image-missing.png	\
-	locked.png	\
+	locked.png		\
 	mail-attachment.png	\
-	unlocked.png
+	unlocked.png		\
+	user-trash-full.png
 
 EXTRA_DIST =			\
 	$(icons_DATA)
