saved search folders

--- a/22x22/places/Makefile.am
+++ b/22x22/places/Makefile.am
@@ -5,8 +5,9 @@ context = places
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =			\
-	folder-remote.png	\
 	folder.png		\
+	folder-remote.png	\
+	folder-saved-search.png	\
 	network-server.png	\
 	network-workgroup.png	\
 	user-desktop.png	\
